[package]
name = "janitor-text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever           = "0"
markup5ever_rcdom   = "0"
pulldown-cmark      = { version = "0", default-features = false, features = ["simd"] }
regex               = "1"
whatlang            = "0"